--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -1,5 +1,13 @@
 .side-bar {
   width: 300px;
-  height: 100vh;
-  background-color: #253141;
+
+  &__user-name{
+    height: 100px;
+    background-color: #253141; 
+  }
+
+  &__group-list{
+    height: calc(100vh - 100px);
+    background-color: #2f3e51;
+  }
 }
