--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -3,7 +3,15 @@
 
   &__user-name{
     height: 100px;
-    background-color: #253141; 
+    background-color: #253141;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    &__box{
+      background-color: #d8d8d8;
+      height: 20px;
+      width: 100%;
+    }
   }
 
   &__group-list{
