左右に離してレイアウトしようを実行しました

--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -11,6 +11,14 @@
       background-color: #d8d8d8;
       height: 20px;
       width: 100%;
+      display: flex;
+      justify-content: space-between;
+      &__name{
+
+      }
+      &__icons{
+        width: 60px;
+      }
     }
   }
 
