--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,5 +1,7 @@
 .side-bar
   .side-bar__user-name
     .side-bar__user-name__box
-
+      .side-bar__user-name__box__name
+        masa
+      .side-bar__user-name__box__icons
   .side-bar__group-list
