アイコン表示しました

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,4 +4,8 @@
       .side-bar__user-name__box__name
         masa
       .side-bar__user-name__box__icons
+        = link_to '#' do
+          = icon('fas', 'edit', class:'icon-btn')
+        = link_to '#' do
+          = icon('fas', 'cog', class:'icon-btn')
   .side-bar__group-list
