正しい色を設定しました

--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -8,13 +8,13 @@
     align-items: center;
     padding: 0 20px;
     &__box{
-      background-color: #d8d8d8;
+      background-color: #253141;
       height: 20px;
       width: 100%;
       display: flex;
       justify-content: space-between;
       &__name{
-
+        color: white;
       }
       &__icons{
         width: 60px;
