--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -34,5 +34,20 @@
   &__group-list{
     height: calc(100vh - 100px);
     background-color: #2f3e51;
-  }
+
+    &__box{
+      padding: 20px 20px 40px 20px;
+      color: #ffffff;
+      &__list-name{
+        font-size: 15px;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      &__message{
+        font-size: 11px;
+        font-weight: bold;
+      }
+    }
+  }  
 }
