--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,3 +9,8 @@
         = link_to '#' do
           = icon('fas', 'cog', class:'icon-btn')
   .side-bar__group-list
+    .side-bar__group-list__box
+      .side-bar__group-list__box__list-name
+        techcamp
+      .side-bar__group-list__box__message
+        まだメッセージがありません
