グループ概要のコーディング

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,11 @@
 .main-chat
   .main-chat__group-name
+    .main-chat__group-name__left-box
+      .main-chat__group-name__left-box__current-group
+        test
+      .main-chat__group-name__left-box__member
+        Member：
+    
+    =link_to 'Edit','#', class: "main-chat__group-name__edit-btn"
   .main-chat__message-list
   .main-chat__message-form
