--- a/app/assets/stylesheets/_main-chat.scss
+++ b/app/assets/stylesheets/_main-chat.scss
@@ -4,6 +4,38 @@
   &__group-name{
     height: 100px;
     background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+
+    &__left-box{
+      margin: 35px 40px 0 40px;
+      &__current-group{
+        font-size: 20px;
+        color: #333333;
+      } 
+      &__member{
+        font-size: 12px;
+        color: #999999;
+        margin-top: 15px;
+      } 
+      
+    }
+    &__edit-btn{
+      border: 1px solid #38aef0;
+      text-decoration: none;
+      margin-top: 28px;
+      font-size: 16px;
+      color: #38aef0;
+      width: 72px;
+      height: 40px;
+      margin-right: 40px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+
   }
 
   &__message-list{
