メッセージ一覧をコーディングしました！

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,4 +8,19 @@
     
     =link_to 'Edit','#', class: "main-chat__group-name__edit-btn"
   .main-chat__message-list
+    .main-chat__message-list__topbox
+      .main-chat__message-list__topbox__name
+        masa 
+      .main-chat__message-list__topbox__date
+        2019/11/20(Wed) 17:43:01
+    .main-chat__message-list__message
+      おはよう！
+
+    .main-chat__message-list__topbox
+      .main-chat__message-list__topbox__name
+        masa 
+      .main-chat__message-list__topbox__date
+        2019/11/20(Wed) 17:43:34
+    .main-chat__message-list__message
+      今日は夜から雨
   .main-chat__message-form
