--- a/app/assets/stylesheets/_main-chat.scss
+++ b/app/assets/stylesheets/_main-chat.scss
@@ -41,6 +41,25 @@
   &__message-list{
     height: calc(100vh - 190px);
     background-color: #fafafa;
+    padding: 35px 0px 0px 40px;
+    &__topbox{
+      display: flex;
+      padding-bottom: 12px ;
+      &__name{
+        color: #333333;
+        font-size: 16px;
+      }
+      &__date{
+        color: #999999;
+        font-size: 12px;
+        padding-left: 10px;
+      }
+    }
+    &__message{
+      color: #434A54;
+      font-size: 14px;
+      margin-bottom: 46px;
+    }
   }
 
   &__message-form{
