--- a/app/assets/stylesheets/_main-chat.scss
+++ b/app/assets/stylesheets/_main-chat.scss
@@ -65,5 +65,47 @@
   &__message-form{
     height: 90px;
     background-color: #d2d2d2;
+
+    &__box{
+      display: flex;
+      padding: 0 40px;
+      &__content{
+        display: flex;
+        padding: 10px 0 ;
+        position: relative;
+        width: 100%;
+        &__text{
+          height: 50px;
+          padding: 0 10px ;
+          width: 100%;
+          margin-right:15px ;
+          border-style: none;
+        }
+
+        &__image{
+          position: absolute;
+          right: 20px;
+          top: 20px;
+          font-size: 25px;
+          &__icon{
+
+          }
+
+          &__hidden{
+            display: none;
+          }
+        }
+      }
+      &__send-button{
+        color: #ffffff;
+        height: 50px;
+        margin-top: 10px;
+        padding: 0 30px;
+        background-color: #38aef0;
+        border-style: none;
+      }
+    }
   }
+
 }
+
