--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -23,4 +23,12 @@
         2019/11/20(Wed) 17:43:34
     .main-chat__message-list__message
       今日は夜から雨
+
   .main-chat__message-form
+    %form.main-chat__message-form__box
+      .main-chat__message-form__box__content
+        %input{type: 'text', class:'main-chat__message-form__box__content__text',placeholder: 'type a message'}
+        %label{class:'main-chat__message-form__box__content__image' } 
+          =icon('far','image', class: 'main-chat__message-form__box__content__image__icon')
+          %input{type:"file", class:'main-chat__message-form__box__content__image__hidden'}
+      %input{type: "submit", value: 'Send' ,class: 'main-chat__message-form__box__send-button'}
