--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .side-bar__user-name
     .side-bar__user-name__box
       .side-bar__user-name__box__name
-        masa
+        = current_user.name
       .side-bar__user-name__box__icons
         = link_to '#' do
           = icon('fas', 'edit', class:'icon-btn')
-        = link_to '#' do
+        = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class:'icon-btn')
   .side-bar__group-list
     .side-bar__group-list__box
