--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       .side-bar__user-name__box__name
         = current_user.name
       .side-bar__user-name__box__icons
-        = link_to '#' do
+        = link_to new_group_path do
           = icon('fas', 'edit', class:'icon-btn')
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class:'icon-btn')
