ビューのデザイン

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,8 +9,10 @@
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class:'icon-btn')
   .side-bar__group-list
-    .side-bar__group-list__box
-      .side-bar__group-list__box__list-name
-        techcamp
-      .side-bar__group-list__box__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side-bar__group-list__box
+        = link_to '#' do
+          .side-bar__group-list__box__list-name
+            = group.name
+          .side-bar__group-list__box__message
+            まだメッセージがありません
